--- a/working/index.html
+++ b/working/index.html
@@ -48,7 +48,7 @@
         </div>
     </div>
 
-<!--    <script src="lib/jquery-3.7.1.min.js"></script>-->
+    <script src="lib/jquery-3.7.1.min.js"></script>
 
     <script>
 
