create the function using jquery for start button

--- a/working/index.html
+++ b/working/index.html
@@ -51,6 +51,14 @@
     <script src="lib/jquery-3.7.1.min.js"></script>
 
     <script>
+        $("#startButton").click(function (){
+
+
+
+
+        });
+
+
 
 
 
