create the set interval method

--- a/working/index.html
+++ b/working/index.html
@@ -54,6 +54,10 @@
         $("#startButton").click(function (){
             let array = ["A" , "B" , "C" , "D" ,"E" , 'F']
 
+            setInterval(()=>{
+
+            },3000);
+
 
 
         });
