--- a/Case01/index.html
+++ b/Case01/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Part 01</title>
     <link rel="stylesheet" href="./index.css">
 </head>
 <body>
