--- a/case02/index.html
+++ b/case02/index.html
@@ -10,18 +10,18 @@
 
 <div class="container">
     <div class="row">
-        <div class="i-flex first">
-            <div class="inner-div"></div>
+        <div class="i-flex first ">
+            <div class="inner-div colour1"></div>
         </div>
         <div class="i-flex middle">
-            <div class="inner-div"></div>
-            <div class="inner-div"></div>
-            <div class="inner-div"></div>
-            <div class="inner-div"></div>
+            <div class="inner-div colour2"></div>
+            <div class="inner-div colour3"></div>
+            <div class="inner-div colour4"></div>
+            <div class="inner-div colour5"></div>
 
         </div>
         <div class="i-flex last ">
-            <div class="inner-div"></div>
+            <div class="inner-div colour6"></div>
         </div>
     </div>
 </div>
