--- a/case02/index.html
+++ b/case02/index.html
@@ -40,6 +40,7 @@
                 colours.unshift(last_colour);
 
                 for (let i = 0 ; i<colours.length ;i++){
+                    // $(".inner-div").eq(i).css("background-color",colours[i]);
                     $(".inner-div").eq(i).css("background-color",colours[i]);
                 }
 
